--- a/partisan/templates/components/modals/not-implemented-yet.html
+++ b/partisan/templates/components/modals/not-implemented-yet.html
@@ -9,7 +9,7 @@
           <h4 class="modal-title">Not Implemented Yet</h4>
         </div>
         <div class="modal-body">
-          <p>Trinket is still in beta and as such, there are some features and functionality that are not currently implemented yet. Stay tuned, we're working hard on it!</p>
+          <p>Partisan Discourse is still in beta and as such, there are some features and functionality that are not currently implemented yet. Stay tuned, we're working hard on it!</p>
         </div>
         <div class="modal-footer">
           <button class="btn btn-default btn-sm" data-dismiss="modal">Close</button>
