--- a/partisan/templates/registration/login.html
+++ b/partisan/templates/registration/login.html
@@ -47,7 +47,7 @@
               {% else %}
               <div class="alert alert-warning alert-dismissible" role="alert">
                 <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <strong>Warning!</strong> You must login to access DDL Trinket.
+                <strong>Warning!</strong> You must login to access DDL Partisan Discourse.
               </div>
               {% endif %}
             {% endif %}
@@ -140,7 +140,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="caModalLabel">Accessing the DDL Trinket Application</h4>
+        <h4 class="modal-title" id="caModalLabel">Accessing the DDL Partisan Discourse Application</h4>
       </div>
       <div class="modal-body">
         <p class="lead">So you want special access behind the scenes eh?</p>
