--- a/partisan/templates/rest_framework/api.html
+++ b/partisan/templates/rest_framework/api.html
@@ -22,7 +22,7 @@
 
 {% block branding %}
   <a class="navbar-brand" href="/">
-    <i class="fa fa-bar-chart"></i> DDL Trinket API
+    <i class="fa fa-bar-chart"></i> DDL Partisan Discourse API
   </a>
 {% endblock %}
 
@@ -40,11 +40,6 @@
     <li>
       <a href="{% url 'admin:index' %}">
         <i class="fa fa-cog"></i> Management
-      </a>
-    </li>
-    <li>
-      <a href="{% url 'member:list' %}">
-        <i class="fa fa-users"></i> Members
       </a>
     </li>
     <li>
