--- a/partisan/templates/site/legal/legal-page.html
+++ b/partisan/templates/site/legal/legal-page.html
@@ -33,7 +33,7 @@
             <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href="{% url 'home' %}">
-            <i class="fa fa-flask"></i> DDL Trinket
+            <i class="fa fa-flask"></i> DDL Partisan Discourse
           </a>
         </div>
         <p class="navbar-text navbar-right collapse navbar-collapse">
