--- a/partisan/templates/rest_framework/api.html
+++ b/partisan/templates/rest_framework/api.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 {% load gravatar %}
 
-{% block title %}Tinket API{% endblock %}
+{% block title %}Partisan Discourse API{% endblock %}
 
 {% block bootstrap_theme %}
     <link href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.5/yeti/bootstrap.min.css" rel="stylesheet">
