--- a/partisan/templates/site/home.html
+++ b/partisan/templates/site/home.html
@@ -6,6 +6,30 @@
     <!-- Primary content area -->
     <div class="row">
 
+      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+        <form id="urlForm" role="form" method="POST" action="{% url 'api:document-list' %}">
+          <div class="form-group">
+            <div class="input-group">
+              <span class="input-group-addon">
+                <i id="urlFormIcon" class="fa fa-globe"></i>
+                <i id="urlFormSpinner" class="fa fa-spin fa-spinner hidden"></i>
+              </span>
+              <input type="url" class="form-control" id="long_url" name="long_url" placeholder="Enter URL of webpage to classify ...">
+              <span class="input-group-btn">
+                <button class="btn btn-primary" type="submit" id="submitUrlBtn">Go!</button>
+              </span>
+            </div>
+            <span class="help-block"></span>
+          </div>
+          {% csrf_token %}
+        </form>
+      </div>
+
+      <div class="col-md-12">
+        <h3>Documents Fetched and Parsed</h3>
+        <ul class="list-unstyled" id="documentsFetched"></ul>
+      </div>
+
     </div><!-- primary content area ends -->
   </div><!-- container ends -->
 
@@ -13,4 +37,87 @@
 
 {% block javascripts %}
   {{ block.super }}
+  <script type="text/javascript">
+    (function($) {
+      $(document).ready(function() {
+
+        var urlForm = $("#urlForm");
+
+        // Handle urlForm submission
+        urlForm.submit(function(e) {
+          e.preventDefault();
+
+          // Remove form errors if any
+          removeErrors(urlForm);
+
+          // Get form data
+          var data = {
+            'long_url': $('#long_url').val()
+          }
+
+          // POST the form to the endpoint
+          var endpoint = urlForm.attr('action');
+          var method   = urlForm.attr('method');
+
+          // Disable the form and show spinner
+          toggleURLForm();
+
+
+          $.ajax({
+              "url": endpoint,
+              "method": method,
+              "data": JSON.stringify(data),
+              "contentType": "application/json"
+          }).done(function(data) {
+              toggleURLForm();
+
+              li = $("<li></li>");
+              an = $("<a></a>");
+              an.attr('href', data.short_url);
+              an.text(data.title || data.short_url);
+              li.append(an);
+
+              ul = $("#documentsFetched");
+              ul.append(li);
+          }).fail(function(xhr) {
+              data = xhr.responseJSON;
+              console.log(data)
+
+              // Set the error for particular fields.
+              $.each(data, function(key, val) {
+                  var field = $("#"+key);
+                  if (field.length == 0) {
+                    field = $("#long_url");
+                  }
+
+                  field.closest('.form-group').addClass("has-error");
+                  field.closest('.form-group').find('.help-block').text(val);
+              });
+
+              toggleURLForm();
+          });
+
+          return false;
+        });
+
+        // Toggle Form Disabled
+        function toggleURLForm() {
+          $("#urlFormSpinner").toggleClass("hidden");
+          $("#urlFormIcon").toggleClass("hidden");
+          $('#long_url').prop('disabled', function(i, v) { return !v; });
+          $('#submitUrlBtn').prop('disabled', function(i, v) { return !v; });
+        }
+
+        // Remove Errors Form
+        function removeErrors(form) {
+          $.each(form.find('.has-error'), function(idx, elem) {
+            elem = $(elem);
+            elem.removeClass("has-error");
+            elem.find('.help-block').text("");
+          });
+        }
+
+      });
+    })(jQuery);
+  </script>
 {% endblock %}
