changed wording from political to partisan

--- a/partisan/templates/base.html
+++ b/partisan/templates/base.html
@@ -6,12 +6,12 @@
   <meta http-equiv="X-UA-Compatible" content="chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>{% block title %}Political Discourse{% endblock %}</title>
+  <title>{% block title %}Partisan Discourse{% endblock %}</title>
 
   {% block meta %}
   <meta name="author" content="{% block author %}District Data Labs{% endblock %}">
-  <meta name="keywords" content="{% block keywords %}Data Science, District Data Labs, Political Discourse, Machine Learning{% endblock %}">
-  <meta name="description" content="{% block description %}Political Discourse by District Data Labs{% endblock %}">
+  <meta name="keywords" content="{% block keywords %}Data Science, District Data Labs, Partisan Discourse, Machine Learning{% endblock %}">
+  <meta name="description" content="{% block description %}Partisan Discourse by District Data Labs{% endblock %}">
   {% endblock %}
 
   {% block link %}
