--- a/partisan/templates/components/footer.html
+++ b/partisan/templates/components/footer.html
@@ -18,7 +18,7 @@
         </p>
         <p class="text-right text-muted">
           <small>
-            Political Discourse v<span id="footerVersion"></span>
+            Partisan Discourse v<span id="footerVersion"></span>
             &middot
             status: <span id="footerStatus"><i class="fa fa-circle"></i></span>
           </small>
