--- a/partisan/templates/components/navbar.html
+++ b/partisan/templates/components/navbar.html
@@ -11,7 +11,7 @@
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="/">
-        <i class="fa fa-comment"></i> Political Discourse <sup><small>beta</small></sup>
+        <i class="fa fa-comment"></i> Partisan Discourse <sup><small>beta</small></sup>
       </a>
     </div>
 
