about page with built with attributions closed #8

--- a/partisan/assets/css/style.css
+++ b/partisan/assets/css/style.css
@@ -84,3 +84,10 @@ div.header-buttons {
 .text-democratic {
     color: #008cba;
 }
+
+
+.jumbotron {
+    background-color: #008cba;
+    margin-top: -41px;
+    color: #FEFEFE;
+}
