--- a/partisan/templates/components/footer.html
+++ b/partisan/templates/components/footer.html
@@ -3,6 +3,7 @@
     <div class="row">
       <div class="col-xs-6">
         <ul class="list-unstyled list-inline" style="padding-top:12px;">
+          <li><a href="{% url 'about' %}">About</a></li>
           <li><a href="{% url 'terms' %}">Terms</a></li>
           <li><a href="{% url 'privacy' %}">Privacy</a></li>
           <li><a href="{% url 'api:api-root' %}">API</a></li>
